--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
             dockerfile: Dockerfile.dev
             context: ./client
         volumes: 
-            - /app/node_modules
-            - ./client:/app
+            - /home/node/app/node_modules
+            - ./client:/home/node/app
     worker:
         build: 
             dockerfile: Dockerfile.dev
@@ -36,6 +36,9 @@ services:
         volumes: 
             - /app/node_modules
             - ./worker:/app
+        environment: 
+            - REDIS_HOST=redis
+            - REDIS_PORTP=redis
     nginx:
         restart: always
         build: 
