Fixing travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 
 
 script:
-  - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true pdtg/react-test npm test
   - docker image rm pdtg/react-test
 
 after_success:
