--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ before_install:
 
 script:
   - docker run -e CI=true $DOCKER_ID/react-test npm test
-  - docker image rm -f $DOCKER_ID/react-test
 
 after_success:
   - docker build -t $DOCKER_ID/complex-client ./client
@@ -17,4 +16,7 @@ after_success:
   #Log in to docker CLI
   - echo $DOCKER_PASSWORD | docker login --username $DOCKER_ID --password-stdin
   #Take images and push them to docker hub
-  - docker push --all-tags
+  - docker push $DOCKER_ID/complex-client
+  - docker push $DOCKER_ID/complex-nginx
+  - docker push $DOCKER_ID/complex-server
+  - docker push $DOCKER_ID/complex-worker
