Added deploy configs

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,15 @@ after_success:
   - docker push $DOCKER_ID/complex-nginx
   - docker push $DOCKER_ID/complex-server
   - docker push $DOCKER_ID/complex-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-east-2
+  app: 'complex-docker'
+  env: 'Complexdocker-env'
+  bucket_name: elasticbeanstalk-us-east-2-398390233339
+  bucket_path: complex-docker
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
