--- a/.travis.yml
+++ b/.travis.yml
@@ -2,24 +2,24 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t $DOCKER_ID/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t pdtg/react-test -f ./client/Dockerfile.dev ./client
 
 
 script:
-  - docker run -e CI=true $DOCKER_ID/react-test npm test
+  - docker run -e CI=true pdtg/react-test npm test
 
 after_success:
-  - docker build -t $DOCKER_ID/complex-client ./client
-  - docker build -t $DOCKER_ID/complex-nginx ./nginx
-  - docker build -t $DOCKER_ID/complex-server ./server
-  - docker build -t $DOCKER_ID/complex-worker ./worker
+  - docker build -t pdtg/complex-client ./client
+  - docker build -t pdtg/complex-nginx ./nginx
+  - docker build -t pdtg/complex-server ./server
+  - docker build -t pdtg/complex-worker ./worker
   #Log in to docker CLI
   - echo $DOCKER_PASSWORD | docker login --username $DOCKER_ID --password-stdin
   #Take images and push them to docker hub
-  - docker push $DOCKER_ID/complex-client
-  - docker push $DOCKER_ID/complex-nginx
-  - docker push $DOCKER_ID/complex-server
-  - docker push $DOCKER_ID/complex-worker
+  - docker push pdtg/complex-client
+  - docker push pdtg/complex-nginx
+  - docker push pdtg/complex-server
+  - docker push pdtg/complex-worker
 
 deploy:
   provider: elasticbeanstalk
